# collabDocs

./: .env.example  .gitignore  CLAUDE.md  CollabDocs.postman_collection.json  README.md  pyproject.toml  requirements.txt  skills-lock.json
audit_logs/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
audit_logs/migrations/: 0001_initial.py
comments/: models.py  serializers.py  urls.py  views.py
comments/migrations/: 0001_initial.py
config/: middleware.py  settings.py  urls.py
docs/: PRD.md  erd.dbml  project_brief.md
docs/tickets/: README.md  T01-project-scaffold.md  T02-data-models-migrations.md  T03-request-logging-middleware.md  T04-users-api.md  T05-workspaces-api.md  T06-documents-write-versioning.md  T07-documents-read-search-stats.md  T08-comments-api.md  T09-tags-api.md  T10-audit-log-signal-api.md  T11-project-deliverables.md
document_versions/: apps.py  models.py  serializers.py
document_versions/migrations/: 0001_initial.py
documents/: models.py  serializers.py  urls.py  views.py
documents/migrations/: 0001_initial.py  0002_document_unique_document_title_per_workspace.py
tags/: models.py  serializers.py  urls.py
tags/migrations/: 0001_initial.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
workspace_members/: apps.py  models.py  serializers.py
workspace_members/migrations/: 0001_initial.py
workspacemembers/: apps.py  models.py
workspacemembers/migrations/: 0001_initial.py
workspaces/: models.py  serializers.py  urls.py  views.py
(+1 files in other folders)
