[project]
name = "collabdocs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.6",
    "django-environ>=0.14.0",
    "djangorestframework>=3.17.1",
    "psycopg[binary]>=3.3.4",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.6",
    "djangorestframework-stubs>=3.17.0",
]

[tool.pyright]
reportIncompatibleVariableOverride = false
